--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "hardhat": "^2.11.2",
+    "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2"
   },
